--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
- <!DOCTYPE html><html lang="en"><head>    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Online Radio Stations</title>    <style>        body {            font-family: Arial, sans-serif;            margin: 0;            padding: 0;        }        .header {            background-color: #f5f5f5;            padding: 10px 20px;            display: flex;            justify-content: space-between;            align-items: center;        }        .header input {            padding: 5px;            width: 300px;        }        .nav {            background-color: #333;            color: white;            padding: 10px 20px;        }        .nav a {            color: white;            text-decoration: none;            margin-right: 15px;        }        .main {            max-width: 1200px;            margin: 20px auto;            padding: 0 20px;        }        .featured {            margin-bottom: 30px;        }        .grid {            display: grid;            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));            gap: 20px;        }        .station {            border: 1px solid #ddd;            padding: 10px;            text-align: center;        }        .footer {            background-color: #f5f5f5;            padding: 20px;            text-align: center;            margin-top: 30px;        }    </style></head><body>    <div class="header">        <div class="logo">            <h1>Online Radio Stations</h1>        </div>        <div class="search">            <input type="text" placeholder="Search radio stations...">        </div>        <div class="user-menu">            <a href="#">Login</a> | <a href="#">Sign Up</a>        </div>    </div>    <div class="nav">        <a href="#">Home</a>        <a href="#">Genres</a>        <a href="#">Countries</a>        <a href="#">Cities</a>        <a href="#">Favorites</a>    </div>    <div class="main">        <div class="featured">            <h2>Featured Stations</h2>            <div class="grid">                <div class="station">                    <img src="https://via.placeholder.com/150" alt="Station 1">                    <p>Radio Station 1</p>                    <button>Play</button>                </div>                <div class="station">                    <img src="https://via.placeholder.com/150" alt="Station 2">                    <p>Radio Station 2</p>                    <button>Play</button>                </div>                <div class="station">                    <img src="https://via.placeholder.com/150" alt="Station 3">                    <p>Radio Station 3</p>                    <button>Play</button>                </div>            </div>        </div>        <div class="popular">            <h2>Popular Genres</h2>            <div class="grid">                <div class="station">Pop</div>                <div class="station">Rock</div>                <div class="station">Jazz</div>                <div class="station">Classical</div>            </div>        </div>    </div>    <div class="footer">        <p>&copy; 2025 Online Radio Stations. All rights reserved.</p>        <a href="#">About</a> | <a href="#">Contact</a> | <a href="#">Terms</a>    </div></body></html>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Radio Colombia Viva</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .header {
+            background: linear-gradient(90deg, #ffcc00, #ff0000, #003087); /* Colombian flag colors */
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .nav {
+            background-color: #003087;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        .nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        .nav a:hover {
+            color: #ffcc00;
+        }
+        .main {
+            max-width: 1000px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        .player {
+            background-color: #fff;
+            border: 2px solid #ff0000;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 30px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+        .player img {
+            width: 200px;
+            height: 200px;
+            border-radius: 10px;
+        }
+        .genres {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+            gap: 20px;
+        }
+        .genre-card {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 15px;
+            text-align: center;
+            border-radius: 5px;
+            transition: transform 0.2s;
+        }
+        .genre-card:hover {
+            transform: scale(1.05);
+        }
+        .genre-card img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+        .footer {
+            background-color: #003087;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+        }
+        button {
+            background-color: #ffcc00;
+            border: none;
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #e6b800;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Radio Colombia Viva</h1>
+        <p>¡La música de Colombia en tus oídos!</p>
+    </div>
+
+    <div class="nav">
+        <a href="#">Inicio</a>
+        <a href="#">Géneros</a>
+        <a href="#">Programación</a>
+        <a href="#">Contacto</a>
+    </div>
+
+    <div class="main">
+        <div class="player">
+            <h2>Escucha en Vivo</h2>
+            <img src="https://via.placeholder.com/200" alt="Radio Colombia Viva">
+            <p>Transmitiendo lo mejor de la música colombiana</p>
+            <button>Play</button>
+        </div>
+
+        <div class="genres">
+            <h2>Géneros Populares</h2>
+            <div class="genre-card">
