--- a/index.html
+++ b/index.html
@@ -3,55 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmic Explorer Hub</title>
+    <title>Jungle Adventure</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #0a0a23;
-            color: #ffffff;
-            overflow-x: hidden;
+            font-family: 'Verdana', sans-serif;
+            background: linear-gradient(to bottom, #87ceeb, #228b22);
+            color: #fff;
+            height: 100vh;
+            overflow: hidden;
         }
         .header {
             text-align: center;
-            padding: 40px;
-            background: linear-gradient(to bottom, #0a0a23, #1a1a3d);
+            padding: 30px;
+            background-color: rgba(0, 0, 0, 0.3);
         }
         .header h1 {
             margin: 0;
-            font-size: 3em;
-            text-shadow: 0 0 10px #00ffff;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px #000;
         }
-        .main {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+        .jungle {
             position: relative;
+            max-width: 1000px;
+            margin: 0 auto;
+            height: 80vh;
         }
-        /* Animation 1: Rotating Planet */
-        .planet {
+        /* Animation 1: Swinging Monkey */
+        .monkey {
             position: absolute;
-            top: 50px;
-            left: 50px;
-            width: 150px;
-            height: 150px;
-            background: radial-gradient(circle, #ff8c00, #ff4500);
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 80px;
+            background: url('https://via.placeholder.com/80?text=🐒') no-repeat center;
+            animation: swing 3s ease-in-out infinite;
+        }
+        @keyframes swing {
+            0% { transform: translateX(-50%) rotate(-20deg); }
+            50% { transform: translateX(-50%) rotate(20deg); }
+            100% { transform: translateX(-50%) rotate(-20deg); }
+        }
+        /* Animation 2: Growing Flower */
+        .flower {
+            position: absolute;
+            bottom: 20px;
+            left: 20%;
+            width: 50px;
+            height: 50px;
+            background: radial-gradient(circle, #ff69b4, #ff1493);
             border-radius: 50%;
-            animation: rotatePlanet 10s linear infinite;
+            animation: grow 4s infinite alternate;
         }
-        @keyframes rotatePlanet {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        @keyframes grow {
+            0% { transform: scale(0.5); opacity: 0.5; }
+            100% { transform: scale(1.5); opacity: 1; }
         }
-        /* Animation 2: Bouncing Spaceship */
-        .spaceship {
+        /* Animation 3: Fluttering Butterfly */
+        .butterfly {
+            position: absolute;
+            top: 100px;
+            right: 20%;
+            width: 60px;
+            height: 40px;
+            background: url('https://via.placeholder.com/60x40?text=🦋') no-repeat center;
+            animation: flutter 2s infinite;
+        }
+        @keyframes flutter {
+            0% { transform: translateY(0) rotate(0deg); }
+            25% { transform: translateY(-20px) rotate(10deg); }
+            50% { transform: translateY(0) rotate(0deg); }
+            75% { transform: translateY(20px) rotate(-10deg); }
+            100% { transform: translateY(0) rotate(0deg); }
+        }
+        .content {
             text-align: center;
-            margin: 100px 0;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.5);
+            border-radius: 10px;
+            position: absolute;
+            bottom: 100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 300px;
         }
-        .spaceship img {
-            width: 100px;
-            animation: bounceShip 2s ease-in-out infinite;
+        button {
+            background-color: #ff4500;
+            border: none;
+            padding: 10px 20px;
+            color: white;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
         }
-        @keyframes bounceShip {
-            0%, 100% { transform: translateY(0); }
+        button:hover {
+            background-color: #ff6347;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <h1>Jungle Adventure</h1>
+        <p>Explore the wild wonders!</p>
+    </div>
+
+    <div class="jungle">
+        <div class="monkey"></div>
+        <div class="flower"></div>
+        <div class="butterfly"></div>
+        <div class="content">
+            <h2>Welcome to the Jungle</h2>
+            <p>Dive into the heart of nature with us!</p>
+            <button>Begin Adventure</button>
+        </div>
+    </div>
+</body>
+</html>
