--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mickey Mouse Perspective</title>
+    <title>Mi Perspective</title>
     <style>
         body {
             margin: 0;
@@ -27,6 +27,11 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
 
+        if (!ctx) {
+            console.error("Canvas context not supported!");
+            document.body.innerHTML = "Sorry, your browser doesn't support canvas.";
+        }
+
         // Canvas dimensions
         const width = canvas.width;
         const height = canvas.height;
@@ -45,11 +50,73 @@
             const rect = canvas.getBoundingClientRect();
             mouseX = e.clientX - rect.left;
             mouseY = e.clientY - rect.top;
-            angleY = (mouseX - width / 2) * 0.005; // Rotate Y based on X position
-            angleX = (mouseY - height / 2) * 0.005; // Rotate X based on Y position
+            angleY = (mouseX - width / 2) * 0.005; // Y-axis rotation
+            angleX = (mouseY - height / 2) * 0.005; // X-axis rotation
+            console.log(`Mouse: (${mouseX}, ${mouseY}), Angles: (${angleX}, ${angleY})`);
         });
 
-        // Function to draw Mickey Mouse face at a given position and scale
-        function drawMickey(x, y, z, scale) {
-            const projScale = perspective / (perspective + z);
-            const proj
+        // Function to draw Mickey Mouse face
+        function drawMickey(x, y, z) {
+            const scale = perspective / (perspective + z);
+            const projX = x * scale;
+            const projY = y * scale;
+
+            ctx.save();
+            ctx.translate(projX, projY);
+            ctx.scale(scale, scale);
+
+            // Head
+            ctx.beginPath();
+            ctx.arc(0, 0, 50, 0, Math.PI * 2);
+            ctx.fillStyle = '#fff';
+            ctx.fill();
+
+            // Left ear
+            ctx.beginPath();
+            ctx.arc(-40, -40, 30, 0, Math.PI * 2);
+            ctx.fill();
+
+            // Right ear
+            ctx.beginPath();
+            ctx.arc(40, -40, 30, 0, Math.PI * 2);
+            ctx.fill();
+
+            ctx.restore();
+        }
+
+        function draw() {
+            // Clear canvas
+            ctx.fillStyle = '#000';
+            ctx.fillRect(0, 0, width, height);
+
+            // Center the drawing
+            ctx.translate(width / 2, height / 2);
+
+            // Base position and depth
+            let x = 0;
+            let y = 0;
+            let z = 100;
+
+            // Rotate around Y-axis (horizontal)
+            const rotatedX = x * Math.cos(angleY) - z * Math.sin(angleY);
+            const rotatedZ = x * Math.sin(angleY) + z * Math.cos(angleY);
+
+            // Rotate around X-axis (vertical)
+            const finalY = y * Math.cos(angleX) - rotatedZ * Math.sin(angleX);
+            const finalZ = y * Math.sin(angleX) + rotatedZ * Math.cos(angleX);
+
+            // Draw Mickey
+            drawMickey(rotatedX, finalY, finalZ);
+
+            // Reset transformation
+            ctx.translate(-width / 2, -height / 2);
+
+            // Loop animation
+            requestAnimationFrame(draw);
+        }
+
+        // Start animation
+        draw();
+    </script>
+</body>
+</html>
