--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Just add 'data-preview' with PNG URL and 'href' with web address -->
-    <a href="https://example.com" data-preview="preview1.png">Link 1</a>
+    <a href="https://example.com" data-preview="https://i.ebayimg.com/images/g/PqQAAOSwjqpj2CUk/s-l1200.jpg">Link 1</a>
     <br>
     <a href="https://anotherexample.com" data-preview="preview2.png">Link 2</a>
 
