--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Just add 'data-preview' with PNG URL and 'href' with web address -->
     <a href="https://example.com" data-preview="https://i.ebayimg.com/images/g/PqQAAOSwjqpj2CUk/s-l1200.jpg">Link 1</a>
     <br>
-    <a href="https://anotherexample.com" data-preview="preview2.png">Link 2</a>
+    <a href="https://anotherexample.com" data-preview="https://i.ebayimg.com/images/g/PqQAAOSwjqpj2CUk/s-l1200.jpg">Link 2</a>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
