--- a/index.html
+++ b/index.html
@@ -1,70 +1,334 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carrusel Multifuncional</title>
     <style>
-        .preview {
-            position: absolute;
-            display: none;
-            border: 2px solid #333;
-            background: white;
-            padding: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            z-index: 1000;
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            overflow: hidden;
         }
-        .preview img {
-            max-width: 250px;
-            max-height: 250px;
-            display: block;
+        .carousel-container {
+            width: 100%;
+            max-width: 600px;
+            overflow: hidden;
+            position: relative;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .carousel {
+            display: flex;
+            transition: transform 0.5s ease;
+            width: 300%;
+        }
+        .carousel-item {
+            width: 100%;
+            flex-shrink: 0;
+            padding: 20px;
+            box-sizing: border-box;
+            background-color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 400px;
+        }
+        /* Bloc de notas */
+        .notepad {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        #notepad-text {
+            width: 100%;
+            height: 300px;
+            resize: none;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            font-size: 16px;
+        }
+        #download-btn {
+            padding: 10px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        #download-btn:hover {
+            background-color: #0056b3;
+        }
+        /* Juego Brick Breaker */
+        #game-canvas {
+            border: 2px solid #333;
+            background-color: #000;
+            touch-action: none; /* Previene comportamiento táctil predeterminado */
+        }
+        /* GIF */
+        #random-gif {
+            max-width: 100%;
+            max-height: 350px;
+            border-radius: 10px;
+        }
+        /* Indicadores */
+        .indicators {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+        }
+        .indicator {
+            width: 10px;
+            height: 10px;
+            background-color: #bbb;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+        .indicator.active {
+            background-color: #007bff;
         }
     </style>
 </head>
 <body>
-    <!-- Just add 'data-preview' with PNG URL and 'href' with web address -->
-    <a href="https://example.com" data-preview="https://i.ebayimg.com/images/g/PqQAAOSwjqpj2CUk/s-l1200.jpg">Link 1</a>
-    <br>
-    <a href="https://anotherexample.com" data-preview="https://i.ebayimg.com/images/g/PqQAAOSwjqpj2CUk/s-l1200.jpg">Link 2</a>
+    <div class="carousel-container">
+        <div class="carousel" id="carousel">
+            <!-- Bloc de notas -->
+            <div class="carousel-item">
+                <div class="notepad">
+                    <textarea id="notepad-text" placeholder="Escribe tus notas aquí..."></textarea>
+                    <button id="download-btn">Descargar como TXT</button>
+                </div>
+            </div>
+            <!-- Juego Brick Breaker -->
+            <div class="carousel-item">
+                <canvas id="game-canvas" width="400" height="400"></canvas>
+            </div>
+            <!-- GIF aleatorio -->
+            <div class="carousel-item">
+                <img id="random-gif" src="" alt="GIF aleatorio">
+            </div>
+        </div>
+        <div class="indicators">
+            <div class="indicator active" data-index="0"></div>
+            <div class="indicator" data-index="1"></div>
+            <div class="indicator" data-index="2"></div>
+        </div>
+    </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const preview = document.createElement('div');
-            preview.className = 'preview';
-            document.body.appendChild(preview);
+        // Carrusel
+        const carousel = document.getElementById('carousel');
+        const indicators = document.querySelectorAll('.indicator');
+        let currentIndex = 0;
+        let startX = 0;
+        let isDragging = false;
 
-            const links = document.querySelectorAll('a[data-preview]');
-            links.forEach(link => {
-                link.addEventListener('mouseover', (e) => {
-                    const imgUrl = link.getAttribute('data-preview');
-                    preview.innerHTML = `<img src="${imgUrl}" alt="Link Preview">`;
-                    preview.style.display = 'block';
-                    positionPreview(e);
-                });
-
-                link.addEventListener('mousemove', positionPreview);
-
-                link.addEventListener('mouseout', () => {
-                    preview.style.display = 'none';
-                    preview.innerHTML = '';
-                });
+        function updateCarousel() {
+            carousel.style.transform = `translateX(-${currentIndex * 100 / 3}%)`;
+            indicators.forEach((indicator, index) => {
+                indicator.classList.toggle('active', index === currentIndex);
             });
+        }
 
-            function positionPreview(e) {
-                const offset = 15;
-                const previewWidth = preview.offsetWidth;
-                const previewHeight = preview.offsetHeight;
-                const windowWidth = window.innerWidth;
-                const windowHeight = window.innerHeight;
+        function handleSwipeStart(e) {
+            startX = e.type === 'touchstart' ? e.touches[0].clientX : e.clientX;
+            isDragging = true;
+        }
 
-                let left = e.pageX + offset;
-                let top = e.pageY + offset;
-
-                // Prevent preview from going off-screen
-                if (left + previewWidth > windowWidth) left = e.pageX - previewWidth - offset;
-                if (top + previewHeight > windowHeight) top = e.pageY - previewHeight - offset;
-
-                preview.style.left = Math.max(0, left) + 'px';
-                preview.style.top = Math.max(0, top) + 'px';
+        function handleSwipeMove(e) {
+            if (!isDragging) return;
+            const currentX = e.type === 'touchmove' ? e.touches[0].clientX : e.clientX;
+            const diffX = startX - currentX;
+            if (Math.abs(diffX) > 50) {
+                if (diffX > 0 && currentIndex < 2) {
+                    currentIndex++;
+                } else if (diffX < 0 && currentIndex > 0) {
+                    currentIndex--;
+                }
+                updateCarousel();
+                isDragging = false;
             }
+        }
+
+        function handleSwipeEnd() {
+            isDragging = false;
+        }
+
+        carousel.parentElement.addEventListener('touchstart', handleSwipeStart);
+        carousel.parentElement.addEventListener('touchmove', handleSwipeMove);
+        carousel.parentElement.addEventListener('touchend', handleSwipeEnd);
+        carousel.parentElement.addEventListener('mousedown', handleSwipeStart);
+        carousel.parentElement.addEventListener('mousemove', handleSwipeMove);
+        carousel.parentElement.addEventListener('mouseup', handleSwipeEnd);
+        carousel.parentElement.addEventListener('mouseleave', handleSwipeEnd);
+
+        indicators.forEach(indicator => {
+            indicator.addEventListener('click', () => {
+                currentIndex = parseInt(indicator.dataset.index);
+                updateCarousel();
+            });
         });
+
+        // Bloc de notas
+        const notepadText = document.getElementById('notepad-text');
+        const downloadBtn = document.getElementById('download-btn');
+
+        downloadBtn.addEventListener('click', () => {
+            const text = notepadText.value;
+            const blob = new Blob([text], { type: 'text/plain' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'notas.txt';
+            a.click();
+            URL.revokeObjectURL(url);
+        });
+
+        // Juego Brick Breaker
+        const canvas = document.getElementById('game-canvas');
+        const ctx = canvas.getContext('2d');
+        const paddleWidth = 80;
+        const paddleHeight = 10;
+        let paddleX = (canvas.width - paddleWidth) / 2;
+        const ballRadius = 10;
+        let ballX = canvas.width / 2;
+        let ballY = canvas.height - 30;
+        let dx = 2;
+        let dy = -2;
+        const brickRowCount = 5;
+        const brickColumnCount = 8;
+        const brickWidth = 40;
+        const brickHeight = 20;
+        const brickPadding = 10;
+        const brickOffsetTop = 30;
+        const brickOffsetLeft = 30;
+        let bricks = [];
+
+        for (let c = 0; c < brickColumnCount; c++) {
+            bricks[c] = [];
+            for (let r = 0; r < brickRowCount; r++) {
+                bricks[c][r] = { x: 0, y: 0, status: 1 };
+            }
+        }
+
+        function drawPaddle() {
+            ctx.beginPath();
+            ctx.rect(paddleX, canvas.height - paddleHeight, paddleWidth, paddleHeight);
+            ctx.fillStyle = '#0095DD';
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        function drawBall() {
+            ctx.beginPath();
+            ctx.arc(ballX, ballY, ballRadius, 0, Math.PI * 2);
+            ctx.fillStyle = '#0095DD';
+            ctx.fill();
+            ctx.closePath();
+        }
+
+        function drawBricks() {
+            for (let c = 0; c < brickColumnCount; c++) {
+                for (let r = 0; r < brickRowCount; r++) {
+                    if (bricks[c][r].status === 1) {
+                        const brickX = c * (brickWidth + brickPadding) + brickOffsetLeft;
+                        const brickY = r * (brickHeight + brickPadding) + brickOffsetTop;
+                        bricks[c][r].x = brickX;
+                        bricks[c][r].y = brickY;
+                        ctx.beginPath();
+                        ctx.rect(brickX, brickY, brickWidth, brickHeight);
+                        ctx.fillStyle = '#0095DD';
+                        ctx.fill();
+                        ctx.closePath();
+                    }
+                }
+            }
+        }
+
+        function collisionDetection() {
+            for (let c = 0; c < brickColumnCount; c++) {
+                for (let r = 0; r < brickRowCount; r++) {
+                    const b = bricks[c][r];
+                    if (b.status === 1) {
+                        if (ballX > b.x && ballX < b.x + brickWidth && ballY > b.y && ballY < b.y + brickHeight) {
+                            dy = -dy;
+                            b.status = 0;
+                        }
+                    }
+                }
+            }
+        }
+
+        function draw() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawBricks();
+            drawBall();
+            drawPaddle();
+            collisionDetection();
+
+            if (ballX + dx > canvas.width - ballRadius || ballX + dx < ballRadius) {
+                dx = -dx;
+            }
+            if (ballY + dy < ballRadius) {
+                dy = -dy;
+            } else if (ballY + dy > canvas.height - ballRadius - paddleHeight) {
+                if (ballX > paddleX && ballX < paddleX + paddleWidth) {
+                    dy = -dy;
+                } else if (ballY + dy > canvas.height - ballRadius) {
+                    ballX = canvas.width / 2;
+                    ballY = canvas.height - 30;
+                    dx = 2;
+                    dy = -2;
+                    paddleX = (canvas.width - paddleWidth) / 2;
+                }
+            }
+
+            ballX += dx;
+            ballY += dy;
+            requestAnimationFrame(draw);
+        }
+
+        function handleTouchMove(e) {
+            e.preventDefault();
+            const touchX = e.touches[0].clientX - canvas.getBoundingClientRect().left;
+            paddleX = touchX - paddleWidth / 2;
+            if (paddleX < 0) paddleX = 0;
+            if (paddleX > canvas.width - paddleWidth) paddleX = canvas.width - paddleWidth;
+        }
+
+        canvas.addEventListener('touchmove', handleTouchMove);
+        canvas.addEventListener('mousemove', (e) => {
+            const mouseX = e.clientX - canvas.getBoundingClientRect().left;
+            paddleX = mouseX - paddleWidth / 2;
+            if (paddleX < 0) paddleX = 0;
+            if (paddleX > canvas.width - paddleWidth) paddleX = canvas.width - paddleWidth;
+        });
+
+        draw();
+
+        // GIF aleatorio de Giphy
+        const randomGif = document.getElementById('random-gif');
+        const apiKey = 'YOUR_GIPHY_API_KEY'; // Reemplaza con tu clave de API de Giphy
+        fetch(`https://api.giphy.com/v1/gifs/random?api_key=${apiKey}&tag=&rating=g`)
+            .then(response => response.json())
+            .then(data => {
+                randomGif.src = data.data.images.original.url;
+            })
+            .catch(error => {
+                console.error('Error al cargar el GIF:', error);
+                randomGif.src = 'https://via.placeholder.com/400x300?text=Error+cargando+GIF';
+            });
     </script>
 </body>
 </html>
